--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
                 abiFilters 'armeabi-v7a'
             }
         }
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
     }
     buildTypes {
         debug {
@@ -29,6 +32,12 @@ android {
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
+        }
+    }
+    // 解决 More than one file was found with OS independent path... 问题
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
