--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
     repositories {
-        maven { url "https://maven.google.com" }
-        maven { url "https://maven.aliyun.com/repository/google"}
+        google()
         jcenter()
+        maven { url "https://maven.aliyun.com/repository/google"}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath "com.android.tools.build:gradle:4.1.2"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,9 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://maven.google.com" }
-        maven { url "https://maven.aliyun.com/repository/google"}
+        google()
         jcenter()
+        mavenCentral()
+        maven { url "https://maven.aliyun.com/repository/google"}
     }
 }
 
